Update generated content

--- a/home.html
+++ b/home.html
@@ -1535,28 +1535,28 @@
     ]
   },
   {
-    "title": "Arteta: 'Arsenal đủ sức đánh bại Real'",
-    "content": "HLV Mikel Arteta của Arsenal bày tỏ sự tự tin vào khả năng đội bóng của ông có thể đánh bại Real Madrid ở tứ kết Champions League. Sau khi vượt qua PSV với tổng tỷ số 9-3, Arteta nhấn mạnh tầm quan trọng của việc tận dụng lợi thế sân nhà trong trận lượt đi. Ông cũng cho biết Arsenal đã học được nhiều từ thất bại trước Bayern ở mùa giải trước và mong muốn tiến xa hơn trong giải đấu này.",
-    "link": "https://vnexpress.net/arteta-arsenal-du-suc-danh-bai-real-4860865.html",
+    "title": "Arteta: 'Arsenal cần làm gì đó độc nhất để đánh bại Real'",
+    "content": "HLV Mikel Arteta của Arsenal đã nhấn mạnh sự cần thiết phải có một chiến lược độc đáo để đánh bại Real Madrid trong trận tứ kết Champions League sắp tới. Sau khi vượt qua PSV, Arteta cho biết Arsenal cần học hỏi từ thất bại trước Bayern mùa trước và tận dụng lợi thế sân nhà ở lượt đi. Ông kêu gọi người hâm mộ tạo bầu không khí đặc biệt để hỗ trợ đội bóng, đồng thời khẳng định rằng Arsenal quyết tâm tiến xa hơn trong giải đấu này.",
+    "link": "https://vnexpress.net/arteta-arsenal-can-lam-gi-do-doc-nhat-de-danh-bai-real-4860865.html",
     "cat": "the-thao",
     "positivity": 8,
-    "importance": 7,
-    "question": "Arsenal có khả năng đánh bại Real Madrid ở tứ kết Champions League không?",
+    "importance": 9,
+    "question": "Arsenal cần làm gì để đánh bại Real Madrid ở tứ kết Champions League?",
     "answers": [
       {
-        "text": "Có, HLV Arteta tin rằng Arsenal đủ sức thắng Real.",
+        "text": "Có một chiến lược độc đáo",
         "correct": true
       },
       {
-        "text": "Không, Arsenal sẽ thua Real.",
+        "text": "Chỉ cần thi đấu theo cách bình thường",
         "correct": false
       },
       {
-        "text": "Có, nhưng chỉ ở trận lượt đi.",
+        "text": "Tập trung vào phòng ngự",
         "correct": false
       },
       {
-        "text": "Không, Real quá mạnh so với Arsenal.",
+        "text": "Tránh để cầu thủ chấn thương",
         "correct": false
       }
     ]
@@ -1798,37 +1798,6 @@
     ]
   },
   {
-    "title": "Suzuki Swift sắp trở lại Việt Nam, nhập khẩu Nhật Bản",
-    "content": "Mẫu xe Suzuki Swift thế hệ thứ 4 sẽ trở lại thị trường Việt Nam và được nhập khẩu trực tiếp từ Nhật Bản, dự kiến ra mắt vào cuối quý II năm 2025. Các đại lý hiện đang nhận cọc từ khách hàng và xe đã về cảng để làm thủ tục thông quan. So với phiên bản trước, Swift mới có một số cải tiến về thiết kế, đặc biệt là khoang lái, mặc dù kích thước tổng thể gần như không thay đổi.",
-    "link": "https://vnexpress.net/suzuki-swift-sap-tro-lai-viet-nam-nhap-khau-nhat-ban-4860834.html",
-    "cat": "oto-xe-may",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Khi nào Suzuki Swift sẽ trở lại Việt Nam?",
-    "answers": [
-      {
-        "text": "Cuối quý II năm 2025",
-        "correct": true
-      },
-      {
-        "text": "Cuối năm 2024",
-        "correct": false
-      },
-      {
-        "text": "Giữa năm 2025",
-        "correct": false
-      },
-      {
-        "text": "Đầu năm 2025",
-        "correct": false
-      },
-      {
-        "text": "Đầu quý IV năm 2025",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Cuộc thi clip '50 năm - Tỏa sáng miền Nam': Sử dụng điện tiết kiệm, an toàn và đúng cách",
     "content": "Cuộc thi clip '50 năm - Tỏa sáng miền Nam' được tổ chức bởi Tổng công ty Điện lực miền Nam (EVNSPC) nhằm tuyên truyền về việc sử dụng điện tiết kiệm, an toàn và đúng cách. Lễ phát động cuộc thi diễn ra vào ngày 11-3-2025, đánh dấu kỷ niệm 50 năm thành lập ngành điện miền Nam và 50 năm giải phóng miền Nam, thống nhất đất nước. Cuộc thi không chỉ nhằm nâng cao nhận thức của người dân về việc tiết kiệm điện mà còn góp phần vào an ninh năng lượng quốc gia.",
     "link": "https://tuoitre.vn/cuoc-thi-clip-50-nam-toa-sang-mien-nam-su-dung-dien-tiet-kiem-an-toan-va-dung-cach-20250313151048279.htm",
@@ -1855,6 +1824,37 @@
       },
       {
         "text": "Tổ chức hội thảo về điện năng",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Suzuki Swift sắp trở lại Việt Nam, nhập khẩu Nhật Bản",
+    "content": "Mẫu xe Suzuki Swift thế hệ thứ 4 sẽ trở lại thị trường Việt Nam và được nhập khẩu trực tiếp từ Nhật Bản, dự kiến ra mắt vào cuối quý II năm 2025. Các đại lý hiện đang nhận cọc từ khách hàng và xe đã về cảng để làm thủ tục thông quan. So với phiên bản trước, Swift mới có một số cải tiến về thiết kế, đặc biệt là khoang lái, mặc dù kích thước tổng thể gần như không thay đổi.",
+    "link": "https://vnexpress.net/suzuki-swift-sap-tro-lai-viet-nam-nhap-khau-nhat-ban-4860834.html",
+    "cat": "oto-xe-may",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Khi nào Suzuki Swift sẽ trở lại Việt Nam?",
+    "answers": [
+      {
+        "text": "Cuối quý II năm 2025",
+        "correct": true
+      },
+      {
+        "text": "Cuối năm 2024",
+        "correct": false
+      },
+      {
+        "text": "Giữa năm 2025",
+        "correct": false
+      },
+      {
+        "text": "Đầu năm 2025",
+        "correct": false
+      },
+      {
+        "text": "Đầu quý IV năm 2025",
         "correct": false
       }
     ]
@@ -2026,28 +2026,28 @@
     ]
   },
   {
-    "title": "Làm thế nào nhận biết rối loạn tiền đình?",
-    "content": "Rối loạn tiền đình là tình trạng liên quan đến thăng bằng, gây ra triệu chứng như choáng váng, hoa mắt. Các triệu chứng này có thể là dấu hiệu của nhiều bệnh khác nhau, bao gồm tim mạch và stress. Để chẩn đoán chính xác, người bệnh nên thăm khám tại bệnh viện chuyên khoa, nơi bác sĩ sẽ sử dụng công nghệ hiện đại như hệ thống Interacoustics để kiểm tra và xác định nguyên nhân gây ra tình trạng này.",
-    "link": "https://vnexpress.net/lam-the-nao-nhan-biet-roi-loan-tien-dinh-4860719.html",
+    "title": "Đau khớp háng có nên đi bộ?",
+    "content": "Đau khớp háng là vấn đề phổ biến ở người lớn tuổi, đặc biệt là những người bị thoái hóa khớp hoặc viêm khớp. Mặc dù nhiều người lo lắng rằng đi bộ có thể làm tăng cơn đau, nhưng nếu thực hiện đúng cách, đi bộ có thể mang lại nhiều lợi ích cho khớp háng và sức khỏe tổng thể. Đi bộ kích thích sản xuất dịch khớp, giúp khớp hoạt động linh hoạt hơn và hạn chế tình trạng cứng khớp. Tuy nhiên, nếu có các triệu chứng như đau dữ dội hoặc sưng, người bệnh nên ngừng đi bộ và tham khảo ý kiến bác sĩ.",
+    "link": "https://vnexpress.net/dau-khop-hang-co-nen-di-bo-4860837.html",
     "cat": "suc-khoe",
-    "positivity": 7,
-    "importance": 8,
-    "question": "Làm thế nào để nhận biết rối loạn tiền đình?",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Đau khớp háng có nên đi bộ không?",
     "answers": [
       {
-        "text": "Đi khám tại bệnh viện chuyên khoa Tai Mũi Họng hoặc Thần kinh.",
+        "text": "Có, đi bộ đúng cách có thể cải thiện triệu chứng.",
         "correct": true
       },
       {
-        "text": "Uống thuốc tự điều trị tại nhà.",
+        "text": "Không, đi bộ làm tình trạng bệnh nặng hơn.",
         "correct": false
       },
       {
-        "text": "Thực hiện bài tập thể dục hàng ngày.",
+        "text": "Có, nhưng chỉ nên đi bộ trên địa hình bằng phẳng.",
         "correct": false
       },
       {
-        "text": "Chỉ cần nghỉ ngơi và không làm gì cả.",
+        "text": "Không, đi bộ không có tác dụng gì đối với khớp háng.",
         "correct": false
       }
     ]
@@ -2084,28 +2084,28 @@
     ]
   },
   {
-    "title": "Đau khớp háng có nên đi bộ?",
-    "content": "Đau khớp háng là vấn đề phổ biến ở người lớn tuổi, đặc biệt là những người bị thoái hóa khớp hoặc viêm khớp. Mặc dù nhiều người lo lắng rằng đi bộ có thể làm tăng cơn đau, nhưng nếu thực hiện đúng cách, đi bộ có thể mang lại nhiều lợi ích cho khớp háng và sức khỏe tổng thể. Đi bộ kích thích sản xuất dịch khớp, giúp khớp hoạt động linh hoạt hơn và hạn chế tình trạng cứng khớp. Tuy nhiên, nếu có các triệu chứng như đau dữ dội hoặc sưng, người bệnh nên ngừng đi bộ và tham khảo ý kiến bác sĩ.",
-    "link": "https://vnexpress.net/dau-khop-hang-co-nen-di-bo-4860837.html",
+    "title": "Làm thế nào nhận biết rối loạn tiền đình?",
+    "content": "Rối loạn tiền đình là tình trạng liên quan đến thăng bằng, gây ra triệu chứng như choáng váng, hoa mắt. Các triệu chứng này có thể là dấu hiệu của nhiều bệnh khác nhau, bao gồm tim mạch và stress. Để chẩn đoán chính xác, người bệnh nên thăm khám tại bệnh viện chuyên khoa, nơi bác sĩ sẽ sử dụng công nghệ hiện đại như hệ thống Interacoustics để kiểm tra và xác định nguyên nhân gây ra tình trạng này.",
+    "link": "https://vnexpress.net/lam-the-nao-nhan-biet-roi-loan-tien-dinh-4860719.html",
     "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Đau khớp háng có nên đi bộ không?",
+    "positivity": 7,
+    "importance": 8,
+    "question": "Làm thế nào để nhận biết rối loạn tiền đình?",
     "answers": [
       {
-        "text": "Có, đi bộ đúng cách có thể cải thiện triệu chứng.",
+        "text": "Đi khám tại bệnh viện chuyên khoa Tai Mũi Họng hoặc Thần kinh.",
         "correct": true
       },
       {
-        "text": "Không, đi bộ làm tình trạng bệnh nặng hơn.",
+        "text": "Uống thuốc tự điều trị tại nhà.",
         "correct": false
       },
       {
-        "text": "Có, nhưng chỉ nên đi bộ trên địa hình bằng phẳng.",
+        "text": "Thực hiện bài tập thể dục hàng ngày.",
         "correct": false
       },
       {
-        "text": "Không, đi bộ không có tác dụng gì đối với khớp háng.",
+        "text": "Chỉ cần nghỉ ngơi và không làm gì cả.",
         "correct": false
       }
     ]
@@ -4455,37 +4455,6 @@
       },
       {
         "text": "Ngừng sản xuất thịt heo trong thời gian tới",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Tiền đạo Nguyễn Đình Bắc gãy xương bàn chân",
-    "content": "Tiền đạo Nguyễn Đình Bắc đã gặp chấn thương trong buổi tập chiều 12/3 cùng đội tuyển U22 Việt Nam, bị gãy xương bàn ngón số 5. Sau khi được đưa đến bệnh viện, bác sĩ đã nắn chỉnh và bó bột cho anh. Dự kiến, thời gian hồi phục của Đình Bắc sẽ kéo dài từ bốn đến tám tuần, khiến anh phải bỏ dở đợt tập luyện cùng U22 Việt Nam. Nếu hồi phục tốt, anh có thể trở lại thi đấu vào tháng 6.",
-    "link": "https://vnexpress.net/tien-dao-nguyen-dinh-bac-gay-xuong-ban-chan-4860572.html",
-    "cat": "the-thao",
-    "positivity": 4,
-    "importance": 6,
-    "question": "Nguyễn Đình Bắc bị chấn thương gì trong buổi tập?",
-    "answers": [
-      {
-        "text": "Gãy xương bàn chân",
-        "correct": true
-      },
-      {
-        "text": "Rách dây chằng",
-        "correct": false
-      },
-      {
-        "text": "Trật khớp gối",
-        "correct": false
-      },
-      {
-        "text": "Gãy xương tay",
-        "correct": false
-      },
-      {
-        "text": "Đau cơ bắp",
         "correct": false
       }
     ]
