--- a/home_shortnews.html
+++ b/home_shortnews.html
@@ -112,6 +112,37 @@
     ]
   },
   {
+    "title": "Rosé và Lisa (BlackPink) đối chọi phong cách ở Tuần lễ thời trang Paris",
+    "content": "Rosé và Lisa, hai thành viên của nhóm nhạc BlackPink, đã thể hiện phong cách thời trang độc đáo tại Tuần lễ thời trang Paris. Rosé xuất hiện với chiếc đầm lụa trắng ngọt ngào, trong khi Lisa gây ấn tượng với bộ đồ đen quyền lực. Cả hai đều nhận được nhiều sự quan tâm từ truyền thông và người hâm mộ nhờ phong cách nổi bật và cá tính riêng biệt của mình.",
+    "link": "https://dantri.com.vn/giai-tri/rose-va-lisa-blackpink-doi-choi-phong-cach-o-tuan-le-thoi-trang-paris-20250313122359626.htm",
+    "cat": "giai-tri",
+    "positivity": 9,
+    "importance": 8,
+    "question": "Rosé và Lisa đã xuất hiện với phong cách gì tại Tuần lễ thời trang Paris?",
+    "answers": [
+      {
+        "text": "Rosé trong đầm lụa trắng, Lisa trong đồ đen quyền lực",
+        "correct": true
+      },
+      {
+        "text": "Cả hai đều mặc đồ trắng",
+        "correct": false
+      },
+      {
+        "text": "Rosé mặc đồ đen, Lisa mặc đồ trắng",
+        "correct": false
+      },
+      {
+        "text": "Cả hai đều mặc đồ truyền thống",
+        "correct": false
+      },
+      {
+        "text": "Rosé và Lisa không tham gia sự kiện",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Điện Kremlin giải thích về bộ quân phục của Tổng thống Putin khi đến Kursk",
     "content": "Điện Kremlin đã giải thích về việc Tổng thống Nga Vladimir Putin mặc quân phục khi thị sát tại tỉnh Kursk, nơi đang diễn ra xung đột với Ukraine. Người phát ngôn Dmitry Peskov cho biết việc mặc quân phục là phù hợp trong bối cảnh chiến dịch quân sự nhằm đẩy lùi lực lượng Ukraine. Chuyến thăm này diễn ra giữa lúc Nga mở chiến dịch phản công và có những tranh cãi về đề xuất ngừng bắn từ Mỹ.",
     "link": "https://dantri.com.vn/the-gioi/dien-kremlin-giai-thich-ve-bo-quan-phuc-cua-tong-thong-putin-khi-den-kursk-20250313201922162.htm",
@@ -441,6 +472,33 @@
     ]
   },
   {
+    "title": "Hiểu nhầm về tiêm vaccine HPV cho nữ giới",
+    "content": "Bài viết làm rõ những hiểu nhầm phổ biến về tiêm vaccine HPV cho nữ giới. Nhiều người cho rằng chỉ cần quan hệ chung thủy hoặc đã nhiễm HPV thì không cần tiêm phòng, nhưng thực tế virus HPV có thể lây qua nhiều cách và có nhiều chủng khác nhau. Bác sĩ khuyến cáo rằng việc tiêm vaccine HPV là rất quan trọng để phòng ngừa các bệnh liên quan và nên được thực hiện càng sớm càng tốt, đặc biệt cho nữ giới từ 27 tuổi trở lên.",
+    "link": "https://vnexpress.net/hieu-nham-ve-tiem-vaccine-hpv-cho-nu-gioi-4860700.html",
+    "cat": "suc-khoe",
+    "positivity": 8,
+    "importance": 9,
+    "question": "Tại sao nữ giới nên tiêm vaccine HPV?",
+    "answers": [
+      {
+        "text": "Để phòng ngừa nhiễm virus HPV và các bệnh liên quan.",
+        "correct": true
+      },
+      {
+        "text": "Vì tiêm vaccine là bắt buộc.",
+        "correct": false
+      },
+      {
+        "text": "Để giảm cân.",
+        "correct": false
+      },
+      {
+        "text": "Vaccine HPV chỉ dành cho nam giới.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Người suy thận độ 3, 4 nên ăn uống thế nào?",
     "content": "Bài viết cung cấp thông tin về chế độ dinh dưỡng cho người suy thận độ 3 và 4, nhấn mạnh rằng chế độ ăn uống của hai bệnh nhân này cần được điều chỉnh khác nhau. Người suy thận độ 3 có thể ăn uống thoải mái hơn, nhưng vẫn cần giảm đạm, muối và theo dõi sức khỏe. Ngược lại, người suy thận độ 4 cần tuân thủ chế độ ăn nghiêm ngặt hơn, bao gồm kiêng khem nhiều thực phẩm chứa kali và nước để tránh tình trạng nguy hiểm như tăng kali máu.",
     "link": "https://vnexpress.net/nguoi-suy-than-do-3-4-nen-an-uong-the-nao-4860941.html",
@@ -463,33 +521,6 @@
       },
       {
         "text": "Người suy thận độ 4 nên ăn nhiều trái cây và rau quả.",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Mặt mưng mủ sau cấy mỡ tạo 'má baby'",
-    "content": "Một phụ nữ 35 tuổi đã gặp phải tình trạng nhiễm trùng và mủ sau khi cấy mỡ tự thân vào má tại một spa. Các bác sĩ tại Bệnh viện Bạch Mai đã chẩn đoán và điều trị bằng kháng sinh cùng với việc dẫn lưu dịch mủ. Cơ sở y tế khuyến cáo mọi người chỉ nên thực hiện các thủ thuật thẩm mỹ tại những nơi được cấp phép để tránh nguy cơ biến chứng nguy hiểm.",
-    "link": "https://vnexpress.net/mat-mung-mu-sau-cay-mo-tao-ma-baby-4860892.html",
-    "cat": "suc-khoe",
-    "positivity": 3,
-    "importance": 7,
-    "question": "Tại sao người phụ nữ 35 tuổi phải nhập viện sau khi cấy mỡ?",
-    "answers": [
-      {
-        "text": "Vì bị nhiễm trùng và xuất hiện mủ dưới da.",
-        "correct": true
-      },
-      {
-        "text": "Vì gặp phải dị ứng với thuốc gây mê.",
-        "correct": false
-      },
-      {
-        "text": "Vì không thích kết quả thẩm mỹ.",
-        "correct": false
-      },
-      {
-        "text": "Vì cần phải nghỉ ngơi sau khi làm đẹp.",
         "correct": false
       }
     ]
@@ -522,28 +553,59 @@
     ]
   },
   {
-    "title": "Hiểu nhầm về tiêm vaccine HPV cho nữ giới",
-    "content": "Bài viết làm rõ những hiểu nhầm phổ biến về tiêm vaccine HPV cho nữ giới. Nhiều người cho rằng chỉ cần quan hệ chung thủy hoặc đã nhiễm HPV thì không cần tiêm phòng, nhưng thực tế virus HPV có thể lây qua nhiều cách và có nhiều chủng khác nhau. Bác sĩ khuyến cáo rằng việc tiêm vaccine HPV là rất quan trọng để phòng ngừa các bệnh liên quan và nên được thực hiện càng sớm càng tốt, đặc biệt cho nữ giới từ 27 tuổi trở lên.",
-    "link": "https://vnexpress.net/hieu-nham-ve-tiem-vaccine-hpv-cho-nu-gioi-4860700.html",
+    "title": "Mặt mưng mủ sau cấy mỡ tạo 'má baby'",
+    "content": "Một phụ nữ 35 tuổi đã gặp phải tình trạng nhiễm trùng và mủ sau khi cấy mỡ tự thân vào má tại một spa. Các bác sĩ tại Bệnh viện Bạch Mai đã chẩn đoán và điều trị bằng kháng sinh cùng với việc dẫn lưu dịch mủ. Cơ sở y tế khuyến cáo mọi người chỉ nên thực hiện các thủ thuật thẩm mỹ tại những nơi được cấp phép để tránh nguy cơ biến chứng nguy hiểm.",
+    "link": "https://vnexpress.net/mat-mung-mu-sau-cay-mo-tao-ma-baby-4860892.html",
     "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 9,
-    "question": "Tại sao nữ giới nên tiêm vaccine HPV?",
+    "positivity": 3,
+    "importance": 7,
+    "question": "Tại sao người phụ nữ 35 tuổi phải nhập viện sau khi cấy mỡ?",
     "answers": [
       {
-        "text": "Để phòng ngừa nhiễm virus HPV và các bệnh liên quan.",
+        "text": "Vì bị nhiễm trùng và xuất hiện mủ dưới da.",
         "correct": true
       },
       {
-        "text": "Vì tiêm vaccine là bắt buộc.",
+        "text": "Vì gặp phải dị ứng với thuốc gây mê.",
         "correct": false
       },
       {
-        "text": "Để giảm cân.",
+        "text": "Vì không thích kết quả thẩm mỹ.",
         "correct": false
       },
       {
-        "text": "Vaccine HPV chỉ dành cho nam giới.",
+        "text": "Vì cần phải nghỉ ngơi sau khi làm đẹp.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Bông Mai: Truyền cảm hứng tới hàng nghìn sinh viên về vẻ đẹp Việt",
+    "content": "Bông Mai, đạo diễn và cựu nhà báo, đã tổ chức một chuỗi sự kiện giao lưu giới thiệu sách mang tên \"Du khảo: Rực rỡ sắc màu trang phục phụ nữ các dân tộc Việt Nam\" tại TPHCM. Sự kiện không chỉ cung cấp thông tin về văn hóa mà còn khuyến khích sinh viên tham gia thảo luận về bản sắc dân tộc và vai trò của cá nhân trong việc gìn giữ di sản. Bông Mai đã chia sẻ những câu chuyện cảm hứng từ hành trình 99 ngày xuyên Việt của mình, nhấn mạnh tầm quan trọng của việc tự xác định giá trị bản thân và dám sống theo cách riêng.",
+    "link": "https://dantri.com.vn/giai-tri/bong-mai-truyen-cam-hung-toi-hang-nghin-sinh-vien-ve-ve-dep-viet-20250313203545919.htm",
+    "cat": "giao-duc",
+    "positivity": 9,
+    "importance": 8,
+    "question": "Bông Mai đã truyền cảm hứng cho sinh viên về điều gì?",
+    "answers": [
+      {
+        "text": "Vẻ đẹp văn hóa các dân tộc Việt Nam",
+        "correct": true
+      },
+      {
+        "text": "Cách kinh doanh hiệu quả",
+        "correct": false
+      },
+      {
+        "text": "Lịch sử Việt Nam",
+        "correct": false
+      },
+      {
+        "text": "Thể thao và sức khỏe",
+        "correct": false
+      },
+      {
+        "text": "Du lịch nước ngoài",
         "correct": false
       }
     ]
@@ -657,33 +719,6 @@
     ]
   },
   {
-    "title": "Amorim: 'Man Utd bị Ratcliffe chê là đúng'",
-    "content": "HLV Ruben Amorim của Man Utd đã thừa nhận rằng ông và đội bóng không đạt phong độ tốt trong mùa giải này, sau khi bị đồng sở hữu Jim Ratcliffe chỉ trích. Ratcliffe cho rằng nhiều cầu thủ của Man Utd nhận lương cao nhưng không đủ chất lượng để thi đấu hiệu quả. Amorim cũng cho biết ông không phàn nàn về những bình luận của Ratcliffe và cam kết sẽ cải thiện kết quả của đội bóng.",
-    "link": "https://vnexpress.net/amorim-man-utd-bi-ratcliffe-che-la-dung-4860857.html",
-    "cat": "the-thao",
-    "positivity": 4,
-    "importance": 7,
-    "question": "Amorim đã nói gì về sự chỉ trích của Ratcliffe đối với Man Utd?",
-    "answers": [
-      {
-        "text": "Ông thừa nhận đội bóng không thi đấu tốt và cần cải thiện.",
-        "correct": true
-      },
-      {
-        "text": "Ông cho rằng Ratcliffe đã sai khi chỉ trích cầu thủ.",
-        "correct": false
-      },
-      {
-        "text": "Ông không quan tâm đến lời chỉ trích của Ratcliffe.",
-        "correct": false
-      },
-      {
-        "text": "Ông khẳng định rằng Man Utd đang có phong độ tốt.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Ronaldo bị hắt hủi trong cuộc đua Chủ tịch",
     "content": "Cựu danh thủ Ronaldo Nazario đã rút lui khỏi cuộc đua tranh chức Chủ tịch LĐBĐ Brazil (CBF) do không nhận được sự ủng hộ từ các địa phương. Mặc dù ông đã tuyên bố tranh cử từ tháng 12/2024 với mong muốn khôi phục uy tín cho bóng đá Brazil, nhưng chỉ có 4 trong 27 Liên đoàn địa phương ủng hộ ông. Với quyết định này, Rodrigues có khả năng trở thành ứng cử viên duy nhất trong cuộc bầu cử sắp tới.",
     "link": "https://vnexpress.net/ronaldo-bi-hat-hui-trong-cuoc-dua-chu-tich-4860872.html",
@@ -706,6 +741,33 @@
       },
       {
         "text": "Vì ông đã đạt được nhiều thành công trong sự nghiệp",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Amorim: 'Man Utd bị Ratcliffe chê là đúng'",
+    "content": "HLV Ruben Amorim của Man Utd đã thừa nhận rằng ông và đội bóng không đạt phong độ tốt trong mùa giải này, sau khi bị đồng sở hữu Jim Ratcliffe chỉ trích. Ratcliffe cho rằng nhiều cầu thủ của Man Utd nhận lương cao nhưng không đủ chất lượng để thi đấu hiệu quả. Amorim cũng cho biết ông không phàn nàn về những bình luận của Ratcliffe và cam kết sẽ cải thiện kết quả của đội bóng.",
+    "link": "https://vnexpress.net/amorim-man-utd-bi-ratcliffe-che-la-dung-4860857.html",
+    "cat": "the-thao",
+    "positivity": 4,
+    "importance": 7,
+    "question": "Amorim đã nói gì về sự chỉ trích của Ratcliffe đối với Man Utd?",
+    "answers": [
+      {
+        "text": "Ông thừa nhận đội bóng không thi đấu tốt và cần cải thiện.",
+        "correct": true
+      },
+      {
+        "text": "Ông cho rằng Ratcliffe đã sai khi chỉ trích cầu thủ.",
+        "correct": false
+      },
+      {
+        "text": "Ông không quan tâm đến lời chỉ trích của Ratcliffe.",
+        "correct": false
+      },
+      {
+        "text": "Ông khẳng định rằng Man Utd đang có phong độ tốt.",
         "correct": false
       }
     ]
@@ -3918,37 +3980,6 @@
     ]
   },
   {
-    "title": "Một ngày của cụ bà 97 tuổi mê chạy bộ",
-    "content": "Cụ bà Nguyễn Thị Huynh, 97 tuổi, sống tại TP Hà Tĩnh, duy trì thói quen chạy bộ hai lần mỗi ngày. Hàng sáng, cụ dậy sớm để tập thể dục và ăn sáng đầy đủ trước khi tham gia các hoạt động khác. Dù tuổi cao, cụ vẫn tích cực tham gia các lớp thể dục tại phòng gym và thường xuyên chạy bộ quanh công viên. Cụ cũng được con cháu ghi lại những khoảnh khắc tập luyện và chia sẻ trên mạng xã hội, thu hút sự chú ý của nhiều người.",
-    "link": "https://vnexpress.net/mot-ngay-cua-cu-ba-97-tuoi-me-chay-bo-4860200.html",
-    "cat": "suc-khoe",
-    "positivity": 10,
-    "importance": 8,
-    "question": "Cụ bà Nguyễn Thị Huynh có bao nhiêu tuổi?",
-    "answers": [
-      {
-        "text": "97 tuổi",
-        "correct": true
-      },
-      {
-        "text": "90 tuổi",
-        "correct": false
-      },
-      {
-        "text": "85 tuổi",
-        "correct": false
-      },
-      {
-        "text": "100 tuổi",
-        "correct": false
-      },
-      {
-        "text": "92 tuổi",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Bỏ tập gym vì bị PT 'chèo kéo'",
     "content": "Chị Ánh, 43 tuổi, đã bỏ tập gym sau khi bị huấn luyện viên cá nhân (PT) chèo kéo mua thực phẩm chức năng với giá cao, gây ức chế cho chị. Mặc dù đã chi hơn 50 triệu đồng cho gói tập, nhưng những lần áp lực mua hàng từ PT đã khiến chị quyết định ngừng tập luyện. Tình trạng tương tự cũng xảy ra với nhiều khách hàng khác, dẫn đến việc họ cảm thấy phiền phức và không hài lòng với dịch vụ. Các bác sĩ khuyến cáo rằng việc dùng thực phẩm chức năng không thể thay thế chế độ ăn uống và lối sống lành mạnh, và người tiêu dùng cần cẩn trọng khi chọn mua sản phẩm và dịch vụ.",
     "link": "https://vnexpress.net/bo-tap-gym-vi-bi-pt-cheo-keo-4857898.html",
@@ -3998,6 +4029,37 @@
       },
       {
         "text": "Cả hai bên đều phải bồi thường",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Một ngày của cụ bà 97 tuổi mê chạy bộ",
+    "content": "Cụ bà Nguyễn Thị Huynh, 97 tuổi, sống tại TP Hà Tĩnh, duy trì thói quen chạy bộ hai lần mỗi ngày. Hàng sáng, cụ dậy sớm để tập thể dục và ăn sáng đầy đủ trước khi tham gia các hoạt động khác. Dù tuổi cao, cụ vẫn tích cực tham gia các lớp thể dục tại phòng gym và thường xuyên chạy bộ quanh công viên. Cụ cũng được con cháu ghi lại những khoảnh khắc tập luyện và chia sẻ trên mạng xã hội, thu hút sự chú ý của nhiều người.",
+    "link": "https://vnexpress.net/mot-ngay-cua-cu-ba-97-tuoi-me-chay-bo-4860200.html",
+    "cat": "suc-khoe",
+    "positivity": 10,
+    "importance": 8,
+    "question": "Cụ bà Nguyễn Thị Huynh có bao nhiêu tuổi?",
+    "answers": [
+      {
+        "text": "97 tuổi",
+        "correct": true
+      },
+      {
+        "text": "90 tuổi",
+        "correct": false
+      },
+      {
+        "text": "85 tuổi",
+        "correct": false
+      },
+      {
+        "text": "100 tuổi",
+        "correct": false
+      },
+      {
+        "text": "92 tuổi",
         "correct": false
       }
     ]
@@ -4307,64 +4369,6 @@
       },
       {
         "text": "Khoảng 10 năm, doanh thu thấp nhưng lợi nhuận cao.",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Mưa đá ở Sơn La",
-    "content": "Vào chiều ngày 12/3/2025, mưa đá đã xảy ra tại một số xã thuộc huyện Yên Châu và Phù Yên, tỉnh Sơn La, kéo dài khoảng 30 phút. Mưa đá có kích thước bằng đầu ngón tay đã gây thiệt hại cho nhiều vườn hoa màu, đặc biệt là mận và đào, với một số gia đình bị thiệt hại lên đến 80%. Chính quyền địa phương đang tiến hành thống kê thiệt hại do cơn mưa đá này gây ra.",
-    "link": "https://vnexpress.net/mua-da-o-son-la-4860577.html",
-    "cat": "thoi-su",
-    "positivity": 3,
-    "importance": 7,
-    "question": "Mưa đá đã gây thiệt hại cho loại hoa màu nào ở Sơn La?",
-    "answers": [
-      {
-        "text": "Mận",
-        "correct": true
-      },
-      {
-        "text": "Lúa",
-        "correct": false
-      },
-      {
-        "text": "Ngô",
-        "correct": false
-      },
-      {
-        "text": "Cà chua",
-        "correct": false
-      },
-      {
-        "text": "Đậu",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Lisa diện đồ xẻ ngực gợi cảm, gặp gỡ \"người tình màn ảnh\" của Kim Soo Hyun",
-    "content": "Lisa, em út nhóm Blackpink, đã gây chú ý tại buổi trình diễn Thu - Đông 2025 của Louis Vuitton với bộ trang phục gợi cảm có phần cổ xẻ sâu. Cô xuất hiện bên cạnh nhiều ngôi sao nổi tiếng như Jun Ji Hyun và Emma Stone, làm tăng thêm sức nóng cho thảm đỏ. Sự kiện này diễn ra trong khuôn khổ Tuần lễ Thời trang Paris, nơi các thiết kế mang tính sáng tạo và độc đáo được giới thiệu.",
-    "link": "https://dantri.com.vn/giai-tri/lisa-dien-do-xe-nguc-goi-cam-gap-go-nguoi-tinh-man-anh-cua-kim-soo-hyun-20250312125706088.htm",
-    "cat": "giai-tri",
-    "positivity": 9,
-    "importance": 7,
-    "question": "Lisa đã diện trang phục gì tại buổi trình diễn Louis Vuitton?",
-    "answers": [
-      {
-        "text": "Bộ trang phục gợi cảm có phần cổ xẻ sâu",
-        "correct": true
-      },
-      {
-        "text": "Áo khoác ngoài màu trắng",
-        "correct": false
-      },
-      {
-        "text": "Váy xòe dài",
-        "correct": false
-      },
-      {
-        "text": "Bộ đồ thể thao đơn giản",
         "correct": false
       }
     ]
