--- a/home.html
+++ b/home.html
@@ -148,6 +148,33 @@
     // Replace this with your actual news data.
     const newsData = [
   {
+    "title": "Honda cắt bớt nhà máy xăng, tăng sản xuất xe điện",
+    "content": "Honda đã quyết định cắt giảm sản xuất động cơ đốt trong tại Trung Quốc để tập trung vào xe điện, nhằm cạnh tranh với các hãng xe nội địa. Việc này bao gồm việc đóng cửa một dây chuyền sản xuất tại nhà máy Dongfeng Honda Engine, giảm công suất sản xuất hàng năm từ 520.000 xe xuống còn 260.000 xe. Trong bối cảnh doanh số bán xe của Honda giảm 30,9% trong năm 2024, hãng đang chuyển hướng sang sản xuất xe điện với mẫu xe mới S7 nhằm cải thiện vị thế trên thị trường.",
+    "link": "https://vnexpress.net/honda-cat-bot-nha-may-xang-tang-san-xuat-xe-dien-4860744.html",
+    "cat": "oto-xe-may",
+    "positivity": 6,
+    "importance": 8,
+    "question": "Honda đang chuyển hướng sản xuất sang loại xe nào?",
+    "answers": [
+      {
+        "text": "Xe điện",
+        "correct": true
+      },
+      {
+        "text": "Xe động cơ đốt trong",
+        "correct": false
+      },
+      {
+        "text": "Xe hybrid",
+        "correct": false
+      },
+      {
+        "text": "Xe chạy xăng",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Hà Nội, TP HCM có thể áp dụng sớm quy chuẩn khí thải ôtô, xe máy",
     "content": "Phó thủ tướng Trần Hồng Hà yêu cầu Hà Nội và TP HCM áp dụng sớm quy chuẩn khí thải ôtô và xe máy nhằm giảm ô nhiễm không khí. Việc này sẽ được thực hiện trước hết ở những khu vực có mức ô nhiễm cao, đồng thời các bộ ngành sẽ phối hợp để thiết kế chính sách hỗ trợ chuyển đổi sang phương tiện giao thông xanh. Đến nay, việc kiểm soát khí thải xe máy vẫn chưa được triển khai hiệu quả, mặc dù số lượng xe máy tại các thành phố lớn đang gia tăng.",
     "link": "https://vnexpress.net/ha-noi-tp-hcm-co-the-ap-dung-som-quy-chuan-khi-thai-oto-xe-may-4861055.html",
@@ -539,6 +566,33 @@
     ]
   },
   {
+    "title": "Mặt mưng mủ sau cấy mỡ tạo 'má baby'",
+    "content": "Một phụ nữ 35 tuổi đã gặp phải tình trạng nhiễm trùng và mủ sau khi cấy mỡ tự thân vào má tại một spa. Các bác sĩ tại Bệnh viện Bạch Mai đã chẩn đoán và điều trị bằng kháng sinh cùng với việc dẫn lưu dịch mủ. Cơ sở y tế khuyến cáo mọi người chỉ nên thực hiện các thủ thuật thẩm mỹ tại những nơi được cấp phép để tránh nguy cơ biến chứng nguy hiểm.",
+    "link": "https://vnexpress.net/mat-mung-mu-sau-cay-mo-tao-ma-baby-4860892.html",
+    "cat": "suc-khoe",
+    "positivity": 3,
+    "importance": 7,
+    "question": "Tại sao người phụ nữ 35 tuổi phải nhập viện sau khi cấy mỡ?",
+    "answers": [
+      {
+        "text": "Vì bị nhiễm trùng và xuất hiện mủ dưới da.",
+        "correct": true
+      },
+      {
+        "text": "Vì gặp phải dị ứng với thuốc gây mê.",
+        "correct": false
+      },
+      {
+        "text": "Vì không thích kết quả thẩm mỹ.",
+        "correct": false
+      },
+      {
+        "text": "Vì cần phải nghỉ ngơi sau khi làm đẹp.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Hiểu nhầm về tiêm vaccine HPV cho nữ giới",
     "content": "Bài viết làm rõ những hiểu nhầm phổ biến về tiêm vaccine HPV cho nữ giới. Nhiều người cho rằng chỉ cần quan hệ chung thủy hoặc đã nhiễm HPV thì không cần tiêm phòng, nhưng thực tế virus HPV có thể lây qua nhiều cách và có nhiều chủng khác nhau. Bác sĩ khuyến cáo rằng việc tiêm vaccine HPV là rất quan trọng để phòng ngừa các bệnh liên quan và nên được thực hiện càng sớm càng tốt, đặc biệt cho nữ giới từ 27 tuổi trở lên.",
     "link": "https://vnexpress.net/hieu-nham-ve-tiem-vaccine-hpv-cho-nu-gioi-4860700.html",
@@ -561,33 +615,6 @@
       },
       {
         "text": "Vaccine HPV chỉ dành cho nam giới.",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Người suy thận độ 3, 4 nên ăn uống thế nào?",
-    "content": "Bài viết cung cấp thông tin về chế độ dinh dưỡng cho người suy thận độ 3 và 4, nhấn mạnh rằng chế độ ăn uống của hai bệnh nhân này cần được điều chỉnh khác nhau. Người suy thận độ 3 có thể ăn uống thoải mái hơn, nhưng vẫn cần giảm đạm, muối và theo dõi sức khỏe. Ngược lại, người suy thận độ 4 cần tuân thủ chế độ ăn nghiêm ngặt hơn, bao gồm kiêng khem nhiều thực phẩm chứa kali và nước để tránh tình trạng nguy hiểm như tăng kali máu.",
-    "link": "https://vnexpress.net/nguoi-suy-than-do-3-4-nen-an-uong-the-nao-4860941.html",
-    "cat": "suc-khoe",
-    "positivity": 7,
-    "importance": 9,
-    "question": "Người suy thận độ 3 và 4 nên ăn uống như thế nào?",
-    "answers": [
-      {
-        "text": "Người suy thận độ 3 có chế độ ăn thoải mái hơn, trong khi người suy thận độ 4 cần kiêng khem nghiêm ngặt hơn.",
-        "correct": true
-      },
-      {
-        "text": "Người suy thận độ 3 và 4 có thể ăn chung thực đơn.",
-        "correct": false
-      },
-      {
-        "text": "Cả hai cần ăn nhiều thực phẩm chứa kali và nước.",
-        "correct": false
-      },
-      {
-        "text": "Người suy thận độ 4 nên ăn nhiều trái cây và rau quả.",
         "correct": false
       }
     ]
@@ -620,28 +647,28 @@
     ]
   },
   {
-    "title": "Mặt mưng mủ sau cấy mỡ tạo 'má baby'",
-    "content": "Một phụ nữ 35 tuổi đã gặp phải tình trạng nhiễm trùng và mủ sau khi cấy mỡ tự thân vào má tại một spa. Các bác sĩ tại Bệnh viện Bạch Mai đã chẩn đoán và điều trị bằng kháng sinh cùng với việc dẫn lưu dịch mủ. Cơ sở y tế khuyến cáo mọi người chỉ nên thực hiện các thủ thuật thẩm mỹ tại những nơi được cấp phép để tránh nguy cơ biến chứng nguy hiểm.",
-    "link": "https://vnexpress.net/mat-mung-mu-sau-cay-mo-tao-ma-baby-4860892.html",
+    "title": "Người suy thận độ 3, 4 nên ăn uống thế nào?",
+    "content": "Bài viết cung cấp thông tin về chế độ dinh dưỡng cho người suy thận độ 3 và 4, nhấn mạnh rằng chế độ ăn uống của hai bệnh nhân này cần được điều chỉnh khác nhau. Người suy thận độ 3 có thể ăn uống thoải mái hơn, nhưng vẫn cần giảm đạm, muối và theo dõi sức khỏe. Ngược lại, người suy thận độ 4 cần tuân thủ chế độ ăn nghiêm ngặt hơn, bao gồm kiêng khem nhiều thực phẩm chứa kali và nước để tránh tình trạng nguy hiểm như tăng kali máu.",
+    "link": "https://vnexpress.net/nguoi-suy-than-do-3-4-nen-an-uong-the-nao-4860941.html",
     "cat": "suc-khoe",
-    "positivity": 3,
-    "importance": 7,
-    "question": "Tại sao người phụ nữ 35 tuổi phải nhập viện sau khi cấy mỡ?",
+    "positivity": 7,
+    "importance": 9,
+    "question": "Người suy thận độ 3 và 4 nên ăn uống như thế nào?",
     "answers": [
       {
-        "text": "Vì bị nhiễm trùng và xuất hiện mủ dưới da.",
+        "text": "Người suy thận độ 3 có chế độ ăn thoải mái hơn, trong khi người suy thận độ 4 cần kiêng khem nghiêm ngặt hơn.",
         "correct": true
       },
       {
-        "text": "Vì gặp phải dị ứng với thuốc gây mê.",
+        "text": "Người suy thận độ 3 và 4 có thể ăn chung thực đơn.",
         "correct": false
       },
       {
-        "text": "Vì không thích kết quả thẩm mỹ.",
+        "text": "Cả hai cần ăn nhiều thực phẩm chứa kali và nước.",
         "correct": false
       },
       {
-        "text": "Vì cần phải nghỉ ngơi sau khi làm đẹp.",
+        "text": "Người suy thận độ 4 nên ăn nhiều trái cây và rau quả.",
         "correct": false
       }
     ]
