Update generated content

--- a/home.html
+++ b/home.html
@@ -148,6 +148,33 @@
     // Replace this with your actual news data.
     const newsData = [
   {
+    "title": "Lấy ý kiến các cơ quan về sáp nhập tỉnh thành trong tuần sau",
+    "content": "Bộ Chính trị Việt Nam sẽ họp vào ngày mai để quyết định về việc sáp nhập các tỉnh, xã và bỏ cấp huyện. Phó thủ tướng Nguyễn Hòa Bình nhấn mạnh rằng đây là một công việc quan trọng và phức tạp, cần sự phối hợp từ nhiều cơ quan. Dự kiến, trong tuần sau, ý kiến từ các tổ chức đảng, bộ, ngành và địa phương sẽ được thu thập để hoàn thiện kế hoạch này. Sau khi sáp nhập, toàn quốc sẽ có khoảng 2.000 đơn vị hành chính cấp xã còn lại.",
+    "link": "https://vnexpress.net/lay-y-kien-cac-co-quan-ve-sap-nhap-tinh-thanh-trong-tuan-sau-4861063.html",
+    "cat": "thoi-su",
+    "positivity": 7,
+    "importance": 9,
+    "question": "Khi nào Bộ Chính trị sẽ lấy ý kiến về việc sáp nhập tỉnh thành?",
+    "answers": [
+      {
+        "text": "Tuần sau",
+        "correct": true
+      },
+      {
+        "text": "Tháng tới",
+        "correct": false
+      },
+      {
+        "text": "Năm sau",
+        "correct": false
+      },
+      {
+        "text": "Hôm nay",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Đêm nghệ thuật rực rỡ khép lại Lễ hội Cà phê Buôn Ma Thuột lần 9",
     "content": "Lễ hội Cà phê Buôn Ma Thuột lần thứ 9 đã khép lại vào tối 13-3-2025 với đêm nghệ thuật hoành tráng tại Quảng trường 10-3, Đắk Lắk. Chương trình bế mạc mang chủ đề \"Buôn Ma Thuột - Thành phố cà phê\" đã tôn vinh văn hóa cà phê và bản sắc Tây Nguyên qua những tiết mục múa hát, hòa tấu cồng chiêng và hợp xướng. Ông Nguyễn Thiên Văn, Phó chủ tịch UBND tỉnh Đắk Lắk, khẳng định lễ hội thành công rực rỡ, góp phần quảng bá thương hiệu cà phê Việt Nam ra thế giới.",
     "link": "https://tuoitre.vn/dem-nghe-thuat-ruc-ro-khep-lai-le-hoi-ca-phe-buon-ma-thuot-lan-9-20250313213209323.htm",
@@ -790,28 +817,28 @@
     ]
   },
   {
-    "title": "Hiểu nhầm về tiêm vaccine HPV cho nữ giới",
-    "content": "Bài viết làm rõ những hiểu nhầm phổ biến về tiêm vaccine HPV cho nữ giới. Nhiều người cho rằng chỉ cần quan hệ chung thủy hoặc đã nhiễm HPV thì không cần tiêm phòng, nhưng thực tế virus HPV có thể lây qua nhiều cách và có nhiều chủng khác nhau. Bác sĩ khuyến cáo rằng việc tiêm vaccine HPV là rất quan trọng để phòng ngừa các bệnh liên quan và nên được thực hiện càng sớm càng tốt, đặc biệt cho nữ giới từ 27 tuổi trở lên.",
-    "link": "https://vnexpress.net/hieu-nham-ve-tiem-vaccine-hpv-cho-nu-gioi-4860700.html",
+    "title": "Mặt mưng mủ sau cấy mỡ tạo 'má baby'",
+    "content": "Một phụ nữ 35 tuổi đã gặp phải tình trạng nhiễm trùng và mủ sau khi cấy mỡ tự thân vào má tại một spa. Các bác sĩ tại Bệnh viện Bạch Mai đã chẩn đoán và điều trị bằng kháng sinh cùng với việc dẫn lưu dịch mủ. Cơ sở y tế khuyến cáo mọi người chỉ nên thực hiện các thủ thuật thẩm mỹ tại những nơi được cấp phép để tránh nguy cơ biến chứng nguy hiểm.",
+    "link": "https://vnexpress.net/mat-mung-mu-sau-cay-mo-tao-ma-baby-4860892.html",
     "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 9,
-    "question": "Tại sao nữ giới nên tiêm vaccine HPV?",
+    "positivity": 3,
+    "importance": 7,
+    "question": "Tại sao người phụ nữ 35 tuổi phải nhập viện sau khi cấy mỡ?",
     "answers": [
       {
-        "text": "Để phòng ngừa nhiễm virus HPV và các bệnh liên quan.",
+        "text": "Vì bị nhiễm trùng và xuất hiện mủ dưới da.",
         "correct": true
       },
       {
-        "text": "Vì tiêm vaccine là bắt buộc.",
+        "text": "Vì gặp phải dị ứng với thuốc gây mê.",
         "correct": false
       },
       {
-        "text": "Để giảm cân.",
+        "text": "Vì không thích kết quả thẩm mỹ.",
         "correct": false
       },
       {
-        "text": "Vaccine HPV chỉ dành cho nam giới.",
+        "text": "Vì cần phải nghỉ ngơi sau khi làm đẹp.",
         "correct": false
       }
     ]
@@ -844,28 +871,28 @@
     ]
   },
   {
-    "title": "Mặt mưng mủ sau cấy mỡ tạo 'má baby'",
-    "content": "Một phụ nữ 35 tuổi đã gặp phải tình trạng nhiễm trùng và mủ sau khi cấy mỡ tự thân vào má tại một spa. Các bác sĩ tại Bệnh viện Bạch Mai đã chẩn đoán và điều trị bằng kháng sinh cùng với việc dẫn lưu dịch mủ. Cơ sở y tế khuyến cáo mọi người chỉ nên thực hiện các thủ thuật thẩm mỹ tại những nơi được cấp phép để tránh nguy cơ biến chứng nguy hiểm.",
-    "link": "https://vnexpress.net/mat-mung-mu-sau-cay-mo-tao-ma-baby-4860892.html",
+    "title": "Hiểu nhầm về tiêm vaccine HPV cho nữ giới",
+    "content": "Bài viết làm rõ những hiểu nhầm phổ biến về tiêm vaccine HPV cho nữ giới. Nhiều người cho rằng chỉ cần quan hệ chung thủy hoặc đã nhiễm HPV thì không cần tiêm phòng, nhưng thực tế virus HPV có thể lây qua nhiều cách và có nhiều chủng khác nhau. Bác sĩ khuyến cáo rằng việc tiêm vaccine HPV là rất quan trọng để phòng ngừa các bệnh liên quan và nên được thực hiện càng sớm càng tốt, đặc biệt cho nữ giới từ 27 tuổi trở lên.",
+    "link": "https://vnexpress.net/hieu-nham-ve-tiem-vaccine-hpv-cho-nu-gioi-4860700.html",
     "cat": "suc-khoe",
-    "positivity": 3,
-    "importance": 7,
-    "question": "Tại sao người phụ nữ 35 tuổi phải nhập viện sau khi cấy mỡ?",
+    "positivity": 8,
+    "importance": 9,
+    "question": "Tại sao nữ giới nên tiêm vaccine HPV?",
     "answers": [
       {
-        "text": "Vì bị nhiễm trùng và xuất hiện mủ dưới da.",
+        "text": "Để phòng ngừa nhiễm virus HPV và các bệnh liên quan.",
         "correct": true
       },
       {
-        "text": "Vì gặp phải dị ứng với thuốc gây mê.",
+        "text": "Vì tiêm vaccine là bắt buộc.",
         "correct": false
       },
       {
-        "text": "Vì không thích kết quả thẩm mỹ.",
+        "text": "Để giảm cân.",
         "correct": false
       },
       {
-        "text": "Vì cần phải nghỉ ngơi sau khi làm đẹp.",
+        "text": "Vaccine HPV chỉ dành cho nam giới.",
         "correct": false
       }
     ]
@@ -983,28 +1010,28 @@
     ]
   },
   {
-    "title": "VinFast và ngân hàng Indonesia thúc đẩy giao thông điện hóa",
-    "content": "VinFast, hãng xe điện Việt Nam, đã ký kết hợp tác với ngân hàng Bank Negara Indonesia (BNI) để phát triển hệ sinh thái xe điện tại Indonesia. Lễ ký kết diễn ra trong khuôn khổ buổi đối thoại kinh doanh Việt Nam – Indonesia, với mục tiêu thúc đẩy chuyển đổi sang xe xanh và phát triển bền vững. BNI sẽ hỗ trợ VinFast trong việc cung cấp các giải pháp tài chính và tư vấn nhằm khuyến khích người dân Indonesia sử dụng xe điện. Cả hai bên đều cam kết triển khai các chiến dịch nâng cao nhận thức về giao thông xanh và phát triển các sản phẩm xe điện tại thị trường này.",
-    "link": "https://vnexpress.net/vinfast-va-ngan-hang-indonesia-thuc-day-giao-thong-dien-hoa-4861020.html",
-    "cat": "kinh-doanh",
-    "positivity": 8,
-    "importance": 9,
-    "question": "VinFast và ngân hàng nào đã ký hợp tác để phát triển giao thông điện hóa tại Indonesia?",
+    "title": "Ronaldo bị hắt hủi trong cuộc đua Chủ tịch",
+    "content": "Cựu danh thủ Ronaldo Nazario đã rút lui khỏi cuộc đua tranh chức Chủ tịch LĐBĐ Brazil (CBF) do không nhận được sự ủng hộ từ các địa phương. Mặc dù ông đã tuyên bố tranh cử từ tháng 12/2024 với mong muốn khôi phục uy tín cho bóng đá Brazil, nhưng chỉ có 4 trong 27 Liên đoàn địa phương ủng hộ ông. Với quyết định này, Rodrigues có khả năng trở thành ứng cử viên duy nhất trong cuộc bầu cử sắp tới.",
+    "link": "https://vnexpress.net/ronaldo-bi-hat-hui-trong-cuoc-dua-chu-tich-4860872.html",
+    "cat": "the-thao",
+    "positivity": 3,
+    "importance": 7,
+    "question": "Tại sao Ronaldo Nazario rút lui khỏi cuộc đua Chủ tịch LĐBĐ Brazil?",
     "answers": [
       {
-        "text": "Bank Negara Indonesia (BNI)",
+        "text": "Vì không được các Liên đoàn địa phương ủng hộ",
         "correct": true
       },
       {
-        "text": "Ngân hàng Trung ương Indonesia",
+        "text": "Vì ông muốn tập trung vào sự nghiệp cầu thủ",
         "correct": false
       },
       {
-        "text": "Ngân hàng Thế giới",
+        "text": "Vì ông không đủ điều kiện tài chính",
         "correct": false
       },
       {
-        "text": "Ngân hàng Phát triển Châu Á",
+        "text": "Vì ông đã đạt được nhiều thành công trong sự nghiệp",
         "correct": false
       }
     ]
@@ -1037,28 +1064,28 @@
     ]
   },
   {
-    "title": "Ronaldo bị hắt hủi trong cuộc đua Chủ tịch",
-    "content": "Cựu danh thủ Ronaldo Nazario đã rút lui khỏi cuộc đua tranh chức Chủ tịch LĐBĐ Brazil (CBF) do không nhận được sự ủng hộ từ các địa phương. Mặc dù ông đã tuyên bố tranh cử từ tháng 12/2024 với mong muốn khôi phục uy tín cho bóng đá Brazil, nhưng chỉ có 4 trong 27 Liên đoàn địa phương ủng hộ ông. Với quyết định này, Rodrigues có khả năng trở thành ứng cử viên duy nhất trong cuộc bầu cử sắp tới.",
-    "link": "https://vnexpress.net/ronaldo-bi-hat-hui-trong-cuoc-dua-chu-tich-4860872.html",
-    "cat": "the-thao",
-    "positivity": 3,
-    "importance": 7,
-    "question": "Tại sao Ronaldo Nazario rút lui khỏi cuộc đua Chủ tịch LĐBĐ Brazil?",
+    "title": "VinFast và ngân hàng Indonesia thúc đẩy giao thông điện hóa",
+    "content": "VinFast, hãng xe điện Việt Nam, đã ký kết hợp tác với ngân hàng Bank Negara Indonesia (BNI) để phát triển hệ sinh thái xe điện tại Indonesia. Lễ ký kết diễn ra trong khuôn khổ buổi đối thoại kinh doanh Việt Nam – Indonesia, với mục tiêu thúc đẩy chuyển đổi sang xe xanh và phát triển bền vững. BNI sẽ hỗ trợ VinFast trong việc cung cấp các giải pháp tài chính và tư vấn nhằm khuyến khích người dân Indonesia sử dụng xe điện. Cả hai bên đều cam kết triển khai các chiến dịch nâng cao nhận thức về giao thông xanh và phát triển các sản phẩm xe điện tại thị trường này.",
+    "link": "https://vnexpress.net/vinfast-va-ngan-hang-indonesia-thuc-day-giao-thong-dien-hoa-4861020.html",
+    "cat": "kinh-doanh",
+    "positivity": 8,
+    "importance": 9,
+    "question": "VinFast và ngân hàng nào đã ký hợp tác để phát triển giao thông điện hóa tại Indonesia?",
     "answers": [
       {
-        "text": "Vì không được các Liên đoàn địa phương ủng hộ",
+        "text": "Bank Negara Indonesia (BNI)",
         "correct": true
       },
       {
-        "text": "Vì ông muốn tập trung vào sự nghiệp cầu thủ",
+        "text": "Ngân hàng Trung ương Indonesia",
         "correct": false
       },
       {
-        "text": "Vì ông không đủ điều kiện tài chính",
+        "text": "Ngân hàng Thế giới",
         "correct": false
       },
       {
-        "text": "Vì ông đã đạt được nhiều thành công trong sự nghiệp",
+        "text": "Ngân hàng Phát triển Châu Á",
         "correct": false
       }
     ]
